# viernulvier-3

./: .codecov.yml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  bye.world  devx  docker-compose.ci.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  hello.space  hello.world  pyproject.toml  reload_system.sh  setup.cfg  z_minio.py
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fastAPI_usage.md  init_db.py  requirements-dev.txt  requirements.txt
backend/migrations/: 20240101000000_init.sql
backend/src/: config.py  config.rs  database.py  errors.rs  lib.rs  main.py  main.rs  seed_history.py
backend/src/api/: exceptions.py  mod.rs
backend/src/models/: __init__.py  associations.py  blog.rs  blogs.py  event.py  event.rs  gallery.py  genre.py  hall.py  hall.rs  history.py  history.rs  language.py  media.py  media.rs  mod.rs  permission.py  permission.rs  print.py  production.py  production.rs  production_group.py  production_group.rs  role.py  role.rs  sync_state.py  sync_state.rs  tag.py  tag.rs  (+3 more)
backend/tests/: conftest.py  test_api_converters.rs  test_artists.rs  test_auth.rs  test_blog_media.rs  test_blogs.rs  test_csv_converters.rs  test_db_sync.rs  test_events.rs  test_fetchers.rs  test_halls.rs  test_history.rs  test_prod_media.rs  test_production_groups.rs  test_productions.rs  test_roles_permissions.rs  test_statistics.rs  test_status.rs  test_stores.rs  test_sync_new.rs  test_tags.rs  test_users.rs  test_vnv_wrapper.rs  tests.md
(+554 files in other folders)
