[package]
name = "viernulvier-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "viernulvier_backend"
path = "src/lib.rs"

[[bin]]
name = "viernulvier-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
csv = "1"
mime = "0.3"
bytes = "1"
futures = "0.3"
http = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
